Clipper: Allow selecting a folder and fixed screenshot taking issue

--- a/Clipper/joplin-webclipper/popup/src/App.css
+++ b/Clipper/joplin-webclipper/popup/src/App.css
@@ -7,12 +7,13 @@
 	flex-direction: column;
 	background-color: #162b3d;
 	font-size: 16px;
+	color: #5A95C7;
+	padding: 10px;
+	box-sizing: border-box;
 }
 
 .App h2 {
 	font-size: 1em;
-	color: #5A95C7;
-	padding-left: 10px;
 	margin-top: .5em;
 	margin-bottom: .5em;
 	font-weight: normal;
@@ -28,13 +29,12 @@
 
 .App .Controls {
 	flex: 0;
-	padding-top: 10px;
 }
 
 .App .Controls ul {
 	flex: 0;
 	list-style-type: none;
-	padding: 0 10px;
+	padding-left: 0;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
@@ -66,10 +66,8 @@
 	min-height: 0;
 	flex: 1;
 	align-items: stretch;
-	margin: 0 10px 0 10px;
 	display: flex;
 	flex-direction: column;
-	/*border: 2px solid red;*/
 }
 
 .App .Preview .Info {
@@ -102,6 +100,23 @@
 	flex: 0;
 }
 
+.App .Folders {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 5px 0;
+}
+
+.App .Folders label {
+	flex: 0;
+	white-space: nowrap;
+}
+
+.App .Folders select {
+	flex: 1;
+	margin-left: 10px;
+}
+
 .App .StatusBar {
 	color: #5A95C7;
 	font-size: .7em;
@@ -109,8 +124,8 @@
 	flex: 0;
 	flex-direction: 'row';
 	align-items: center;
-	min-height: 31px;
-	padding: 0px 10px 5px 10px;
+	min-height: 20px;
+	padding-top: 5px;
 }
 
 .App .StatusBar .Led {
